amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  ADD: More detailed track information dialog for Collection Browser.
  FIX: Track length was always 0 for certain filetypes (e.g. mod, wav) (BR 82673).
  FIX: Gst engine refusing to add certain filetypes to the playlist, when
       the engine was idle (BR 82713).
  FIX: Rare playlist redraw bug, which resulted in messed up items.

VERSION 1.0-beta4:
  ADD: CollectionDB now caches and rescales images. This binds cover art usage
       in amaroK to the collection, but offers greatly improved speed for cover
       retrieval and uses less memory.
  FIX: Cover not shown in ContextBrowser, when song gets played for the first
       time ever (BR 81241).
  ADD: Cover art fetcher, downloads album cover images from amazon.com.
  ADD: Configure->Playback->Device && default device option for audiosinks.
  ADD: ContextBrowser now also shows your overall-favorites and the newest tracks
       in your collection. Therefor I had to reset the statistics, sorry.
  FIX: Decode %-encoded characters in filenames, like %2f for a slash. (BR 74576).
  CHG: Songs you click in ContextBrowser will now directly start to play and won't
       be added to the playlist, if they already are there.
  FIX: "Start Scan" menu-entry gets disabled while scanning. (BR 81619).
  FIX: Directories with non-ascii chars don't get scanned (CB) in multibyte locales.
  CHG: Enhanced "Fill-Down" feature for track column (auto-increment) (BR 81194).
  FIX: Closing xmms-visualizations freezes amaroK (BR 81326).
  FIX: CollectionBrowser does not sort by tracknumber (BR 79600).
  FIX: ContextBrowser's URLRequests need to be escaped.
  FIX: Always show OSD (if enabled) on volume changes.
  FIX: Filtering the collection using tokens with number(s) at the beginning
       or end failed. (BR 81621).
  FIX: FileBrowser didn't remember its current folder (BR 81816).
  ADD: Expand/collapse items by doubleclicking in Collection (BR 81710).